add the echo effect

--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -65,13 +65,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pcm_concat"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/btn_audio_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/audio_speed"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_audio_echo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_echo"
             android:layout_marginTop="10dp" />
 
     </LinearLayout>
