--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -58,7 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/audio_encode"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/btn_pcm_concat"
@@ -80,6 +81,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/audio_echo"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_audio_tremolo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_tremolo"
             android:layout_marginTop="10dp" />
 
     </LinearLayout>
