--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -106,6 +106,13 @@
             android:text="@string/audio_silence"
             android:layout_marginTop="10dp" />
 
+        <Button
+            android:id="@+id/btn_audio_volume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_volume"
+            android:layout_marginTop="10dp" />
+
     </LinearLayout>
 
     <include
