--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -149,6 +149,13 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/video_thumbnail"/>
 
+            <Button
+                android:id="@+id/btn_rotate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/video_rotate"/>
+
         </LinearLayout>
     </ScrollView>
 
