--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -156,6 +156,13 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/video_rotate"/>
 
+            <Button
+                android:id="@+id/btn_gop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/video_gop"/>
+
         </LinearLayout>
     </ScrollView>
 
