--- a/app/src/main/res/layout/activity_equalizer.xml
+++ b/app/src/main/res/layout/activity_equalizer.xml
@@ -55,6 +55,12 @@
 
     </RadioGroup>
 
+    <com.frank.ffmpeg.view.VisualizerView
+        android:id="@+id/visualizer_fft"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginEnd="16dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
