--- a/app/src/main/res/drawable/btn_rect_normal.xml
+++ b/app/src/main/res/drawable/btn_rect_normal.xml
@@ -2,11 +2,12 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <corners android:radius="30dp" />
+    <corners android:radius="6dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorBord" />
+        android:color="@color/colorAccent" />
     <size
-        android:height="60dp"
-        android:width="60dp" />
+        android:height="40dp"
+        android:width="100dp" />
+
 </shape>
