--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,89 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_main_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
-
-            <Button
-                android:id="@+id/btn_audio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:text="@string/audio_handle"/>
-
-            <Button
-                android:id="@+id/btn_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/video_handle"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_media"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/media_handle"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/media_play"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"/>
-
-            <Button
-                android:id="@+id/btn_push"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/video_push"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_live"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/video_live"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/video_filter"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_preview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/video_preview"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_probe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/media_probe"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:id="@+id/btn_audio_effect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/audio_effect"
-                android:layout_marginTop="10dp" />
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
