--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.frank.ffmpeg.activity.VideoHandleActivity">
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
     <include
         layout="@layout/item_progress"
@@ -11,166 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_video_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
-        <LinearLayout
-            android:id="@+id/layout_video_handle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-            <Button
-                android:id="@+id/btn_video_transform"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_transform"/>
-
-            <Button
-                android:id="@+id/btn_video_cut"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_cut"/>
-
-            <Button
-                android:id="@+id/btn_video_concat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_concat" />
-
-            <Button
-                android:id="@+id/btn_screen_shot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_screen_shot"/>
-
-            <Button
-                android:id="@+id/btn_water_mark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_water_mark"/>
-
-            <Button
-                android:id="@+id/btn_remove_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_remove_logo"/>
-
-            <Button
-                android:id="@+id/btn_generate_gif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_to_gif"/>
-
-            <Button
-                android:id="@+id/btn_screen_record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_screen_record"
-                android:visibility="gone"/>
-
-            <Button
-                android:id="@+id/btn_combine_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_from_photo"/>
-
-            <Button
-                android:id="@+id/btn_multi_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_multi"/>
-
-            <Button
-                android:id="@+id/btn_add_subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_subtitle"/>
-
-            <Button
-                android:id="@+id/btn_reverse_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_reverse"
-                android:visibility="visible"/>
-
-            <Button
-                android:id="@+id/btn_denoise_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_denoise"/>
-
-            <Button
-                android:id="@+id/btn_to_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_image"/>
-
-            <Button
-                android:id="@+id/btn_pip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_pip"/>
-
-            <Button
-                android:id="@+id/btn_moov"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_moov"/>
-
-            <Button
-                android:id="@+id/btn_speed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_speed"/>
-
-            <Button
-                android:id="@+id/btn_flv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_flv"/>
-
-            <Button
-                android:id="@+id/btn_thumbnail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_thumbnail"/>
-
-            <Button
-                android:id="@+id/btn_rotate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_rotate"/>
-
-            <Button
-                android:id="@+id/btn_gop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/video_gop"/>
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
