--- a/app/src/main/res/layout/activity_audio_effect.xml
+++ b/app/src/main/res/layout/activity_audio_effect.xml
@@ -36,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/audio_reverb"/>
+        android:text="@string/audio_reverb"
+        android:visibility="gone"/>
 
     <Spinner
         android:id="@+id/spinner_reverb"
