--- a/app/src/main/res/layout/activity_probe.xml
+++ b/app/src/main/res/layout/activity_probe.xml
@@ -11,10 +11,21 @@
             android:id="@+id/btn_probe_format"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="50dp"
             android:text="@string/media_probe"
             android:textColor="@color/colorPrimary"
-            android:layout_centerHorizontal="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"/>
+
+        <Button
+            android:id="@+id/btn_retrieve_format"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/media_retrieve"
+            android:textColor="@color/colorPrimary"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"/>
 
         <TextView
             android:id="@+id/txt_probe_format"
@@ -25,6 +36,15 @@
             android:textSize="16sp"
             android:layout_below="@+id/btn_probe_format"
             android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/img_frame"
+            android:layout_width="160dp"
+            android:layout_height="90dp"
+            android:layout_below="@+id/txt_probe_format"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"/>
+
     </RelativeLayout>
 
     <ProgressBar
