--- a/app/src/main/res/layout/activity_equalizer.xml
+++ b/app/src/main/res/layout/activity_equalizer.xml
@@ -55,17 +55,12 @@
 
     </RadioGroup>
 
-    <com.frank.ffmpeg.view.VisualizerView
-        android:id="@+id/visualizer_fft"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginEnd="16dp"/>
-
     <RelativeLayout
         android:id="@+id/layout_eq_control"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="18dp">
 
         <SeekBar
             android:id="@+id/eq_bar"
