convert stereo to surround sound

--- a/app/src/main/res/layout/activity_audio_effect.xml
+++ b/app/src/main/res/layout/activity_audio_effect.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/audio_reverb"
+        android:text="@string/audio_effect_reverb"
         android:visibility="gone"/>
 
     <Spinner
