--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_main_item"
+    <TextView
+        android:layout_marginTop="80dp"
+        android:id="@+id/tv_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="version:"
+        ></TextView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_main_item"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true" />
 
-</RelativeLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
